# BASIQ

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  package-lock.json
.cache/clangd/index/: ast.cpp.EFF73625F20C54F5.idx  ast.h.415C2DB67E36C697.idx  codegen.cpp.F5BD93E92A60CF3F.idx  codegen.h.22D562CB167C5E04.idx  colors.h.A0198C19FA9F5DE0.idx  globals.h.2ACD30010A30EE9E.idx  lexer.cpp.39775A6D202ADEF6.idx  lexer.h.E08E6171235B3C19.idx  main.cpp.A34F56A5596DCB46.idx  parser.cpp.8D9598D6DBA18DDC.idx  parser.h.8C91F03EB254CDF9.idx  utils.cpp.0DC116D1F74DC1D5.idx
include/: ast.h  codegen.h  colors.h  globals.h  lexer.h  parser.h
src/: ast.cpp  codegen.cpp  globals.cpp  lexer.cpp  main.cpp  parser.cpp
tests/: my_program  test.basic
